<?xml version="1.0"?>
<package format="2">
  <name>ars_sim_environment</name>
  <version>0.0.1</version>
  <description>The ars_sim_environment</description>

  <maintainer email="joseluis.sanlop@gmail.com">Jose Luis SANCHEZ-LOPEZ</maintainer>
  <author email="joseluis.sanlop@gmail.com">Jose Luis SANCHEZ-LOPEZ</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
